--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,36 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
+development:
   adapter: mysql2
-  encoding: utf8mb4
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  encoding: utf8
+  reconnect: false
+  database: development
+  pool: 5
   username: root
   password:
+  host: localhost
   socket: /tmp/mysql.sock
 
-development:
-  <<: *default
-  database: development
-
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
   database: test
+  pool: 5
+  username: root
+  password:
+  host: localhost
+  socket: /tmp/mysql.sock
+
+production:
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  username: admin
+  password: 8765takuya
+  host: database-mimemovie.cy7jdftr7azg.ap-northeast-1.rds.amazonaws.com
+  pool: 5
+  timeout: 5000
+  database: mimemovie_production
